--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --ext js,jsx,ts,tsx",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -55,7 +55,9 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
